# WolfRedux

docs/: scripts.html
main/maps/: escape1_b0.aas  escape1_b0.rcd  escape1_b1.aas  escape1_b1.rcd  escape2_b0.aas  escape2_b0.rcd  escape2_b1.aas  escape2_b1.rcd
main/models/mapobjects/B-25/: PROPELLER.tga  divider.md3  door.md3  ext_25.md3  exterior.md3  floor_cockpit.md3  fuse1.md3  fuse1a.md3  fuse2.md3  fuse2a.md3  fuse3.md3  fuse4.md3  fuse5.md3  fuse6.md3  fuse7.md3  glass.md3  hatch.md3  interior.md3  main_hatch.md3  nose1.md3  nose1A.md3  sawingspan.md3  stringers.md3  stringers1.md3  stringers2.md3  tail.md3  tail_ext.md3  wing_port.md3  wing_starboard.md3  wingspan.md3  wires.md3
main/models/mapobjects/Skull/: skul2.md3  skul2.mdc  skul2t.md3  skul2t.mdc  skull2a.tga  skull_scale.md3  skull_scale_t45.md3  skull_scale_t90.md3  skull_spirit.tga  skull_tilt1.mdc  skull_wall.md3  skull_wall_f.md3  skull_wallb.md3
main/models/mapobjects/apoth/: wired1.md3
main/models/mapobjects/archeology/: obelisk.md3  pitcher.md3  vase1.md3  vase3.md3  vase4.md3  vase5.md3  vessel.md3
main/models/mapobjects/barbwire/: barbwire.mdc  danwire.MD3
main/models/mapobjects/bat/: bat.md3
main/models/mapobjects/bjui/: bjui.MD3  bjui_b.MD3  bjui_b.MDc
main/models/mapobjects/bodyparts/: bp2.tga  bpblood.tga  bpblood2.tga  deadnazi.md3  doa.md3  helarm.md3  helarm.mdc  helbody.md3  helbody.mdc  helhand.md3  helhand.mdc  helhead.md3  helhead.mdc  l_arm.md3  l_chest.md3  l_engine.md3  l_engine.tga  l_head.md3  leg.md3  legpelvis.md3  legside.md3  naziarm.md3  naziarm.tga  nazitorso.md3  skin1.tga  torso.md3  zom_loog.md3  zomarm.md3  zomtorso.md3
main/models/mapobjects/book/: book.mdc
main/models/mapobjects/boxes/: box32.md3  box48.md3  box64.md3
main/models/mapobjects/bush/: bu.md3  bush.tga  hedge.md3
main/models/mapobjects/chandelier/: chandelier.md3  chandelier_lt.md3  chandelier_lt_sm.md3  chandlier_new.md3  chandlier_new.mdc
main/models/mapobjects/clipboard/: clipboard_h.md3  clipboard_v.md3
main/models/mapobjects/clonetube/: c_water2.tga  cl_door1.tga  clone.md3  clone1.tga
main/models/mapobjects/coat/: coat.md3
main/models/mapobjects/coffin/: coffin.md3
main/models/mapobjects/corpse/: bone1.md3  bone1.mdc  bone2.md3  bone2.mdc  bone3.md3  bone3.mdc  bone4.md3  how_bod1.tga  leg.md3  leg.mdc  legbroke.md3  legbroke.mdc
main/models/mapobjects/curtain/: 2curt_lghtwind.MD3  2curt_lghtwind.mdc  2curt_lghtwindB.MD3  2curt_lghtwindb.mdc  2curtains.tga  2curtains_96.MD3  2curtainsb.tga  curtain.MD3  curtain_200.MD3  curtain_direct.MD3  curtain_direct.mdc
main/models/mapobjects/deadosa/: deadosa.md3  deadosa_new.md3
main/models/mapobjects/debris/: boulder.md3  boulder2.md3  boulder3.md3  brick1.md3  brick1.mdc  brick2.md3  brick2.mdc  brick3.md3  brick3.mdc  brick4.md3  brick4.mdc  brick5.md3  brick5.mdc  brick6.md3  brick6.mdc  bricksm.md3  brickxl.md3  fabric1.md3  fabric2.md3  fabric3.md3  personal1.mdc  personal2.mdc  personal3.md3  personal3.mdc  personal4.md3  personal4.mdc  personal5.md3  personal5.mdc  (+9 more)
main/scripts/: gfx.shader  shaderlist.txt  wolf.def  wolf3d.qe4
src/: CMakeLists.txt  wolf.sln  wolf.vcxproj  wolf.vcxproj.filters
src/botlib/: CMakeLists.txt  be_aas_bsp.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_cluster.h  be_aas_debug.c  be_aas_debug.h  be_aas_def.h  be_aas_entity.c  be_aas_file.c  be_aas_main.c  be_aas_move.c  be_aas_optimize.c  be_aas_reach.c  be_aas_route.c  be_aas_routealt.c  be_aas_routetable.c  be_aas_sample.c  be_ai_goal.c  be_ai_move.c  be_ea.c  be_interface.c  botlib.vcxproj  botlib.vcxproj.filters
src/botutil/: botutil.vcxproj  botutil.vcxproj.filters  l_crc.c  l_log.c  l_memory.c  l_precomp.c  l_script.c  l_struct.c
src/cgame/: CMakeLists.txt  cg_consolecmds.cpp  cg_draw.cpp  cg_drawtools.cpp  cg_effects.cpp  cg_ents.cpp  cg_event.cpp  cg_flamethrower.cpp  cg_info.cpp  cg_local.h  cg_localents.cpp  cg_main.cpp  cg_marks.cpp  cg_newDraw.cpp  cg_particles.cpp  cg_players.cpp  cg_playerstate.cpp  cg_predict.cpp  cg_public.h  cg_scoreboard.cpp  cg_servercmds.cpp  cg_snapshot.cpp  cg_sound.cpp  cg_syscalls.cpp  cg_trails.cpp  cg_view.cpp  cg_weapons.cpp  cgame.vcxproj  cgame.vcxproj.filters
src/client/: cl_cgame.c  cl_cin.c  cl_console.c  cl_input.c  cl_keys.c  cl_main.c  cl_scrn.c  cl_ui.c  client.h  snd_dma.c  snd_public.h
src/game/: CMakeLists.txt  ai_cast.cpp  ai_cast.h  ai_cast_characters.cpp  ai_cast_debug.cpp  ai_cast_dmq3.cpp  ai_cast_events.cpp  ai_cast_fight.cpp  ai_cast_func_attack.cpp  ai_cast_func_boss1.cpp  ai_cast_funcs.cpp  ai_cast_main.cpp  ai_cast_script.cpp  ai_cast_script_actions.cpp  ai_cast_script_ents.cpp  ai_cast_sight.cpp  ai_cast_think.cpp  ai_cast_util.cpp  bg_animation.cpp  bg_misc.cpp  bg_pmove.cpp  bg_public.h  botai.h  botlib.h  g_active.cpp  g_alarm.cpp  g_bot.cpp  g_client.cpp  g_cmds.cpp  g_combat.cpp  g_func_decs.h  g_funcs.h  g_items.cpp  g_local.h  g_main.cpp  g_misc.cpp  g_missile.cpp  g_mover.cpp  g_props.cpp  g_public.h  (+18 more)
src/glew/: glew.c
src/qcommon/: cm_load.c  cm_public.h  cm_trace.c  common.c  files.c  qcommon.h
src/renderer/: CMakeLists.txt  qgl.h  renderer.vcxproj  renderer.vcxproj.filters  tr_animation.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_cmesh.cpp  tr_curve.cpp  tr_flares.cpp  tr_font.cpp  tr_image.cpp  tr_init.c  tr_init.cpp  tr_local.h  tr_main.c  tr_main.cpp  tr_mesh.cpp  tr_model.cpp  tr_public.h  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.c  tr_shader.cpp  tr_shadows.cpp  tr_sky.cpp  tr_surface.cpp
src/server/: server.h  sv_bot.c  sv_ccmds.c  sv_client.c  sv_game.c  sv_init.c  sv_main.c  sv_world.c
src/splines/: CMakeLists.txt  Splines.vcxproj  Splines.vcxproj.filters  q_splineshared.h  splines.cpp  splines.h
src/ui/: CMakeLists.txt  ui.def  ui.vcxproj  ui.vcxproj.filters  ui_atoms.cpp  ui_gameinfo.cpp  ui_local.h  ui_main.cpp  ui_players.cpp  ui_public.h  ui_shared.cpp  ui_shared.h  ui_syscalls.cpp
src/win32/: win_glimp.c  win_glimp.cpp  win_input.c  win_local.h  win_main.c  win_qgl.cpp  win_shared.c  win_syscon.c
zion/tables/: aicast.csv
(+639 files in other folders)
